# dptycho

./: .buildpath  .directory  .gitignore  .project  0001-RAAR-working.patch  2015-11-25.lua  2015-11-25_scan5.lua  2016-03-14-scan1.lua  2016-03-14.lua  2016-04-11.lua  2016-05-09.lua  2016-05-17.lua  2016-05-26.lua  2017-01-25_carbon2_scan1.lua  CMakeLists.txt  K2 experiment.ods  README.md  cx2rgbtest.py  cxi  dptycho-scm-1.rockspec  gen_singleslice.lua  init.lua  main.lua  main2.lua  memory_calc.lua  pca.lua  phase_contrast.py  po.h5.REMOVED.git-id  ptycho.lua  ptycho2.lua  ptycho20.lua  ptycho2twf.lua  ptycho_bg.lua  ptycho_bg_generate.lua  ptycho_linalg.py  ptycho_nosubpix.lua  ptycho_old.lua  ptycho_poisson.lua  ptycho_poisson_generate.lua  ptycho_runner.lua  (+7 more)
core/: init.lua  netbuilder.lua  potential.lua  propagators.lua
core/ptycho/: BM3D_TWF_engine.lua  DM_engine.lua  DM_engine.lua.orig  DM_engine_subpix.lua  Initialization.lua  RAAR_engine.lua  RWF_engine.lua  Runner.lua  TWF_engine.lua  TWF_engine.lua.orig  TWF_engine_subpix.lua  base_engine.lua  base_engine.lua.orig  base_engine_shifted.lua  base_engine_shifted.lua.orig  init.lua  init.lua.orig  initialization.lua  ops.lua  ops_general.lua  ops_subpixel.lua  params.lua
dptycho/io/: __init__.py  h5rw.py  interaction.py  json_rw.py  plotting.py
dptycho/simulations/: DataLoader.py
dptycho/utils/: __init__.py  math_utils.py  parameters.py  plot_utils.py  utils_BE.py  verbose.py
io/: DataLoader.lua  dataloader.lua  init.lua  plot.lua  plot.py
matplotlib-philipp/: fontList.cache
nn/: Sum.lua  init.lua
scripts/: experiment_suite.lua  experiment_suite.lua.orig  experiment_suite2.lua  experiment_suite_DM.lua  experiment_suite_probetest.lua  figure_averaging.lua  prepare_probes.lua  prepare_probes2.lua  ptycho_runner.lua  test_simulation.lua  test_simulation0.lua
simulation/: .~lock.K2Count3eps20.csv#  K2Count3eps2.csv  K2Count3eps20.csv  K2Count3eps2_left_out.csv  init.lua  mtfdqe.py  probe.py  random_probe.py  simulator.lua
test/: test.lua
util/: allocator.lua  init.lua  linear_schedule.lua  physics.lua  stats.lua  stats.py  tabular_schedule.lua
znn/: AddConst.lua  AtomRadiusPenalty.lua  BM3D_MSE_Criterion.lua  BM3D_MSE_Criterion_BACKUP_4381.lua  BM3D_MSE_Criterion_LOCAL_4381.lua  BM3D_MSE_Criterion_REMOTE_4381.lua  CMul.lua  CMulModule.lua  ComplexAbs.lua  ConvFFT2D.lua  ConvParams.lua  ConvSlice.lua  EuclideanLoss.lua  FFT.lua  MultiCriterionVariableWeights.lua  PoissonLikelihood.lua  Select.lua  Source.lua  SpatialSmoothnessCriterion.lua  Sqrt.lua  SqrtInPlace.lua  Square.lua  Sum.lua  SupportMask.lua  THZNN.lua  THZNN.lua.orig  TVCriterion.lua  Threshold.lua  TraceCriterion.lua  TracePenalty.lua  TruncatedPoissonLikelihood.lua  VolumetricConvolutionFixedFilter.lua  WSECriterion.lua  WeightedL1Cost.lua  WeightedLinearCriterion.lua  init.lua
znn/lib/: CMakeLists.txt
znn/lib/THZNN/: CMakeLists.txt  THZNN.h  THZNN.h.gch  THZNN.h.orig  WSECriterion.cu  WSECriterion.cu.orig
