CMAKE_MINIMUM_REQUIRED(VERSION 2.8 FATAL_ERROR)
CMAKE_POLICY(VERSION 2.8)

IF(NOT Torch_FOUND)
  FIND_PACKAGE(Torch REQUIRED)
ENDIF()

IF(NOT CUDA_FOUND)
  FIND_PACKAGE(CUDA 4.0 REQUIRED)
ENDIF()

IF(NOT THZNN_INSTALL_LIB_SUBDIR)
  SET(THZNN_INSTALL_LIB_SUBDIR "lib" CACHE PATH "THZNN install library directory")
ENDIF()

FILE(GLOB src-cuda *.cu)

CUDA_ADD_LIBRARY(THZNN MODULE ${src-cuda})

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
TARGET_LINK_LIBRARIES(THZNN THC TH)

INSTALL(TARGETS THZNN LIBRARY DESTINATION ${THZNN_INSTALL_LIB_SUBDIR})
